--- a/src/app/flights/flights-list/one-way/one-way.component.html
+++ b/src/app/flights/flights-list/one-way/one-way.component.html
@@ -1,11 +1,11 @@
 <mat-spinner *ngIf="isLoading" color="accent"></mat-spinner>
-<cdk-virtual-scroll-viewport itemSize="flights.length" class="example-viewport" *ngIf="!isLoading">
+<mat-card class="example-viewport" *ngIf="!isLoading">
     <mat-list multi="true" *ngIf="flights.length > 0">
         <mat-list-item *ngFor="let flight of flights">
             <div mat-line>
                 <mat-icon mat-list-icon>flight_takeoff</mat-icon>
                 <b style="margin-left: 5px">{{ flight.departure }} - {{ flight.arrival }}</b>
-                {{ flight.dep_time }}-{{ flight.arr_time }}
+                <small>{{ flight.dep_time }}-{{ flight.arr_time }}</small>
             </div>
             <p mat-line>
                 {{ flight.dep_date }} - {{ flight.arr_date }}
@@ -19,7 +19,7 @@
             <mat-divider></mat-divider>
         </mat-list-item>
     </mat-list>
-</cdk-virtual-scroll-viewport>
-<mat-paginator [length]="totalFlights" [pageSize]="flightsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"
+    <mat-paginator [length]="totalFlights" [pageSize]="flightsPerPage" [pageSizeOptions]="pageSizeOptions" (page)="onChangedPage($event)"
     *ngIf="flights.length > 0"></mat-paginator>
-<p class="info-text mat-body-1" *ngIf="flights.length <= 0 && !isLoading">No flights found!</p>
+    <p class="info-text mat-body-1" *ngIf="flights.length <= 0 && !isLoading">No flights found!</p>
+</mat-card>
